--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h1 class="text-center">Hi, I'm Anna Heselbarth</h1>
             <div class="row mt-4">
                 <div class="col-lg-4">
-                    <img src="C:\Users\hesel\Documents\ElevenFiftyProjects\RedBadge\SoftwarePortfolio\Assets\anna headshot winter.jpg" class= "imageAboutPage" alt="">
+                    <img src="C:\Users\hesel\Documents\ElevenFiftyProjects\RedBadge\SoftwarePortfolio\Assets\anna headshot winter.JPG" class= "imageAboutPage" alt="">
                 </div>
 
                 <div class="col-lg-8">
@@ -124,7 +124,7 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="C:\Users\hesel\Documents\ElevenFiftyProjects\RedBadge\SoftwarePortfolio\Assets\woman eating.png" class="d-block w-100" alt="food trial app">
+                    <img src="C:\Users\hesel\Documents\ElevenFiftyProjects\RedBadge\SoftwarePortfolio\Assets\woman eating.PNG" class="d-block w-100" alt="food trial app">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Food Trial Helper</h5>
                       <p>Food Trial Application is a .NET Framework MVC 5 Web Application using n-tier architecture. </p>
@@ -132,7 +132,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="C:\Users\hesel\Documents\ElevenFiftyProjects\RedBadge\SoftwarePortfolio\Assets\ElevenNoteScreenshot.png" class="d-block w-100" alt="...">
+                    <img src="C:\Users\hesel\Documents\ElevenFiftyProjects\RedBadge\SoftwarePortfolio\Assets\ElevenNoteScreenshot.PNG" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Eleven Note</h5>
                       <p>Eleven Note is a .Net Framework MVC Web Application.</p>
